# chinese_checkers_ai

./: GEMINI.md  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
chinese_checkers_ai/: __main__.py  input.py
chinese_checkers_ai/v1/controller/: q_controller.py  user_controller.py
chinese_checkers_ai/v1/model/: board.py  color.py  slot.py
chinese_checkers_ai/v1/trainer/: neat.py
chinese_checkers_ai/v1/view/: board.py  game.py  node.py
chinese_checkers_ai/v2/: game.py  node.py
chinese_checkers_ai/v2/controller/: ai_controller.py  heuristic_controller.py  naive_controller.py  user_board_controller.py  visual_deep_q_controller.py
chinese_checkers_ai/v2/model/: board.py
chinese_checkers_ai/v2/trainer/: deepq.py  deepq2.py  evolution.py
chinese_checkers_ai/v2/view/: board_view.py
chinese_checkers_ai/v3/: node.py  program.py
chinese_checkers_ai/v3/controller/: abstract_controller.py  heuristic_controller.py  user_controller.py
chinese_checkers_ai/v3/model/: board.py  color.py  group.py  move.py  player.py  position.py
chinese_checkers_ai/v3/trainer/: cursor_deepq_trainer.py  deepq.py
chinese_checkers_ai/v3/view/: board_view.py  game.py
components/: Board.vue  Sidebar.vue  Toolbar.vue
components/sidebar/: GamePanel.vue  ModelsPanel.vue
lib/: useBoard.ts  useGameConfig.ts
pages/: index.vue
