[tool.poetry]
name = "chinese-checkers-ai"
version = "0.1.0"
description = ""
authors = ["Will Meyburgh <annekinmeyburgh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
torch = {version = "^2.7.0+cpu", source = "pytorch-cpu"}
torchvision = {version = "^0.22.0+cpu", source = "pytorch-cpu"}
maturin = "^1.8.6"
scipy = "^1.15.3"


[tool.poetry.group.dev.dependencies]
maturin = "^1.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = 'supplemental'